modify model, controller and auth
