# schema/user.js
@@ -1,7 +1,15 @@
 const { UserModelDefine } = require("../resource/models/user");
 
 const UserSchema = {
-  BodyUserSchema: UserModelDefine,
+  BodyRegisterSchema: {
+    username: "john.customer",
+    password: "123456",
+    role_id: "uuid",
+  },
+  BodyLoginSchema: {
+    username: "john.owner",
+    password: "123456",
+  },
   QueryUserSchema: {
     username: UserModelDefine.username,
   },
